--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ APP_ENV=dev
 APP_SECRET=f99455b017b5cb16a6af7d8df7f0fb56
 DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 
-WEBSOCKET_URL=localhost
+WEBSOCKET_HOST=localhost
 WEBSOCKET_PORT=3001
